<resources>
    <string name="app_name">DayBook</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_active">Transactions</string>
    <string name="title_completed">Profile</string>
    <string name="text_income">Income :</string>
    <string name="text_expense">Expense :</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_profile">Profile</string>
    <string name="hint_select_category">Select Category</string>
    <string name="title_category_list">Categories</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="title_add_category">Add Category</string>
    <string name="hint_type_category">Enter Category Name</string>
    <string name="text_add_category">Add Category</string>
    <string name="warn_empty_name">Please enter category name.</string>
    <string name="warn_empty_subject">Please enter subject.</string>
    <string name="warn_empty_amount">Please enter valid amount</string>
    <string name="warn_empty_date">Please select transaction date.</string>
    <string name="warn_select_paid_by">Please select paid by</string>
    <string name="warn_select_category">Please select category for your transaction.</string>
    <string name="text_no_result">You have not made any transactions in selected duration. Please look up for different dates or create a transaction for the current duration.</string>
    <string name="text_add_expense">ADD TO EXPENSE</string>
    <string name="text_add_income">ADD TO INCOME</string>
    <string name="title_settings">Settings</string>
    <string name="title_currency_selection">Currecy Selection</string>
    <string name="hint_search_country">Search Currency</string>
    <string name="take_photo_title">Take Photo</string>
    <string name="from_gallery_text">Choose from Gallery</string>
    <string name="cancel_text">Cancel</string>
    <string name="attach_image">Attachment Image</string>
    <string name="notification_channel_id">daybook_noti_id</string>
    <string name="notification_title">Daybook Backup</string>
    </resources>
