<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sanspro_semibold"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_13ssp"
            android:text="@string/title_add_category"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_light"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvCategoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/source_sanspro_semibold"
            android:padding="@dimen/_5sdp"
            android:text="Category Name"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLine" />

        <EditText
            android:id="@+id/etCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textSize="@dimen/_11ssp"
            android:background="@drawable/gray_boarder"
            android:padding="@dimen/_8sdp"
            android:hint="@string/hint_type_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCategoryText" />

        <TextView
            android:id="@+id/tvColorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/source_sanspro_semibold"
            android:padding="@dimen/_5sdp"
            android:text="Select Category Color"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCategoryName" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvColorText" />

        <TextView
            android:id="@+id/tvCategoryType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/source_sanspro_semibold"
            android:paddingTop="@dimen/_5sdp"
            android:paddingStart="@dimen/_5sdp"
            android:text="Category For"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvColor" />

        <RadioGroup
            android:id="@+id/rgType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCategoryType">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sanspro_regular"
                android:checked="true"
                android:buttonTint="@color/colorPrimaryDark"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                android:text="Expense"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sanspro_regular"
                android:textColor="@color/black"
                android:buttonTint="@color/colorPrimaryDark"
                android:textSize="@dimen/_11ssp"
                android:text="Income"/>
        </RadioGroup>
        <Button
            android:id="@+id/btnAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/source_sanspro_semibold"
            android:text="@string/text_add_category"
            app:layout_constraintTop_toBottomOf="@id/rgType"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>