<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/general_actionbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/gray_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/groupNoResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="tvExpense,tvExpenseText,tvIncome,tvIncomeText,rvTransaction" />


                <LinearLayout
                    android:id="@+id/linSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_10sdp"
                    android:background="@color/white"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvRange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:fontFamily="@font/source_sanspro_regular"
                        android:gravity="center"
                        android:textColor="@color/black"
                        tools:text="12th Sep 2020 - 15th Sep 2020"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linChart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:background="@color/white"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linSpinner">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/pieChart"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:background="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.6" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvChartCategory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/pieChart"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/ivNoData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/tvNoResult"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linSpinner"
                    android:scaleType="centerInside"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:src="@drawable/ic_no_transaction" />

                <TextView
                    android:id="@+id/tvNoResult"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:fontFamily="@font/source_sanspro_regular"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/text_no_result"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivNoData" />

                <TextView
                    android:id="@+id/tvIncomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:fontFamily="@font/regular"
                    android:text="@string/text_income"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linChart" />

                <TextView
                    android:id="@+id/tvIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:fontFamily="@font/heavy"
                    android:text="+₹12000"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toEndOf="@id/tvIncomeText"
                    app:layout_constraintTop_toBottomOf="@id/linChart" />

                <TextView
                    android:id="@+id/tvExpenseText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:fontFamily="@font/regular"
                    android:text="@string/text_expense"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toEndOf="@id/tvIncome"
                    app:layout_constraintTop_toBottomOf="@id/linChart" />

                <TextView
                    android:id="@+id/tvExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:fontFamily="@font/heavy"
                    android:text="-₹12000"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toEndOf="@id/tvExpenseText"
                    app:layout_constraintTop_toBottomOf="@id/linChart" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTransaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvIncomeText" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>